adicionado novo elemento

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Artigo com Anúncios</title>
     <link rel="stylesheet" href="./style/main.css">
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-ML3VH8DS');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -20,6 +32,11 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML3VH8DS" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGQ96MP5" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
@@ -40,7 +57,7 @@
 
     <div class="top-banner-ad"
         style="color: #666;font-family: 'Courier New', Courier, monospace; text-transform: uppercase;">[ Publicidade ]
-        <div id="header" style="min-width:300px; min-height:50px;"></div>
+        <div id="header_formats" style="min-width:300px; min-height:50px;"></div>
     </div>
 
     <div class="main">
