adicionado novo elemento v1

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="top-banner-ad"
                     style="color: #666;font-family: 'Courier New', Courier, monospace; text-transform: uppercase;">[
                     Publicidade ]
-                    <div id="div-gpt-ad" style="width:300px; height:250px; background:#f0f0f0; margin: 20px auto;">
+                    <div id="middle_formats" style="width:300px; height:250px; background:#f0f0f0; margin: 20px auto;">
                     </div>
                 </div>
 
