--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- End Google Tag Manager -->
 </head>
 
-<body>
+<body data-page-type="home">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML3VH8DS" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
